Version 2.4.7
------------------------------------------------------------------
27 January 2009
+ Added option to layout theme tab to disable or order module style
  sheet inclusion.
+ Updated: templates/themes.tpl

26 January 2009
+ Can enable box move from mini admin

Version 2.4.6
------------------------------------------------------------------
18 December 2008
+ Fix to cache headers

Version 2.4.5
------------------------------------------------------------------
18 November 2008
+ Added LAYOUT_IGNORE_JS_CHECK to force javascript use.

3 November 2008
+ Added missing deity_reload column to layout_config table. Thanks
  Micah. 
+ Reduced some db calls.

27 October 2008
+ Added code that lets deities move boxes whereever they wish.

17 October 2008
+ Tweaked the javascript mod force code. Previously would break core
  javascript.

16 October 2008
+ Added LAYOUT_FORCE_MOD_JS define. Forces module javascript usage.

8 September 2008
+ Not caching frontpage title because of array repeat problem.

13 June 2008
+ Added option to use a Key's summary or title to fill in the meta
  description.
+ Updated: templates/metatags.tpl

11 June 2008
+ Added new cacheHeader function to retain javascript and css
  information should a module return cached content before the above
  can be established.

Version 2.4.4
------------------------------------------------------------------
4 June 2008
+ Removed allowUser from database and settings class.

26 May 2008
+ Added collapse function. Adds id="layout-collapse" to theme template
  under the {COLLAPSE} tag.

28 April 2008
+ Changed method of checking for javascript status. Less chance for
  error.
+ Fixed notice.
+ Updated : templates/user_form.tpl

Version 2.4.3
-------------------------------------------------------------------
20 February 2008
+ nakedDisplay now allows a choice whether to use the blank template
  or not when it wraps. Default is to not.

23 January 2008
+ Fixed noCache.

Version 2.4.2